# SIMDE_vectorclass

./: meson.build
lib/: main.cpp  meson.build
src/: test.cpp
subprojects/: simde.wrap
